--- a/vignettes/Week14_Contemporary_Gene_Flow/Week14_vignette.Rmd
+++ b/vignettes/Week14_Contemporary_Gene_Flow/Week14_vignette.Rmd
@@ -21,7 +21,7 @@ vignette: >
 In this lab, you will use the `gstudio` package to analyse parent-offspring data for the wildflower *Pulsatilla vulgaris*. You will learn: 
 
 - how to conduct landscape genetic analyses on pollen pools,
-- how toconduct paternity analysis to quantify contemporary pollen flow, and 
+- how to conduct paternity analysis to quantify contemporary pollen flow, and 
 - how to relate realized pollen flow events to landscape variables.
 
 The data are from DiLeo et al. (in press). The data include genotypes from seeds, mothers, and all potential fathers from seven focal populations. The study area in the Franconian Jura in Germany is the same as for the *Dianthus carthusianorum* data from Week 7 (see introductory video by Yessica Rico for the Dianthus data set to learn more about the system). 
@@ -42,22 +42,26 @@ All packages should have been installed already with the package `LandGenCourse`
 
 ```{r, packages}
 library(LandGenCourse)
+library(dplyr)
 library(ggplot2)
 #library(gstudio)
+#library(pegas)
 #library(vegan)
 #library(purrr)
 #library(MuMIn)
 #library(lme4)
+#library(cowplot)
 ```
 
 ## 2. Import Genotypes
 
-**NOTE HW: The files are currently included as external data in LandGenCourse. Should we provide them as data sets (in R format, with meta data)?**
-
 The package `gstudio` makes it very easy to import genotype data (see Week 1). Typically, we store our genotype data in a spreadsheet with one line per individual and two columns per locus. Using the `read_population` function, we tell `gstudio` which columns contain our loci. The argument `type="column"` indicates that our raw text file stores genotypes in two columns per locus.
 
+### a) Import genotype data
+
 ```{r, import}
-dat <- gstudio::read_population(system.file("extdata",              "pulsatilla_genotypes.csv", package="LandGenCourse"), 
+dat <- gstudio::read_population(system.file("extdata",              
+        "pulsatilla_genotypes.csv", package="LandGenCourse"), 
         type = "column", locus.columns = 6:19)
 dat$ID <- as.factor(dat$ID)
 ```
@@ -70,17 +74,40 @@ head(dat)
 
 There are 12 columns:
 
-- **ID**: A unique identifier for every adult
-- **OffID**: Zero if the sample is an adult and >0 if the sample is an offspring
-- **Population**: The population of origin
-- **2 coordinate columns, X & Y**: The geographic coordinates of the sample
-- **7 locus columns**: For each locus, the genotype is stored in a single column with alleles separated by ":"*
+- **ID**: A unique identifier for every adult.
+- **OffID**: Zero if the sample is an adult and > 0 if the sample is an offspring.
+- **Population**: The population of origin.
+- **2 coordinate columns, X & Y**: The geographic coordinates of the sample (Euclidean coordinate system Gauss-Krueger GK4 with CRS("+init=epsg:31468")).
+- **7 locus columns**: For each locus, the microsatellite genotype is stored in a single column with alleles separated by ":".
 
-**NOTE HW: What are the coordinates? Same as for Dianthus? Are they Euclidean, like UTM?**
+### b) Plot map of sampling locations
 
-**NOTE HW: what are the genetic data? Microsats?**
+To create a map with `qmplot` (see Week 4), here we do the following:
 
-Let's look at the data for mother with the ID=3083 and her associated offspring:
+- Use functions from `dplyr` to get mean coordinates per population
+- Convert the coordinates to lat-lon coordinates with `sf_project` from the `sf` package. We use the EPSG reference numbers (http://epsg.io/) to specify the 'from' and 'to' coordinate systems. 
+- Download a "terrain" map from "google", with zoom level 12.
+- Add population labels with `geom_text`. We specify an offset along the x-axis,`nudge_x`, and for sites 'A25' and 'A26' also an offset along the y-axis to prevent labels from overlapping.
+
+```{r fig.height=5, fig.width=7}
+Coords <- dat %>% group_by(Population) %>% 
+          summarize(X = mean(X), Y = mean(Y))
+Coords <- data.frame(Coords, sf::sf_project(from = "+init=epsg:31468", 
+          to = "+init=epsg:4326", pts = Coords[c("X", "Y")]))
+names(Coords)[4:5] <- c("Longitude", "Latitude")
+
+MyMap <- ggmap::qmplot(Longitude, Latitude, data=Coords, 
+                       source = "google", maptype="terrain", zoom=12) 
+MyMap + geom_text(data = Coords, mapping = aes(Longitude, Latitude, 
+              label = Population), size = 4, col = "black", hjust = 0, 
+              nudge_x = 0.005, nudge_y = c(0,0,0.002,-0.001,0,0,0)) 
+```
+
+## 3. Pollen pool genetic structure
+
+### a) Subtract maternal contribution to offspring genotype
+
+Let's look at the data for the mother with the ID=3083 and her associated offspring:
 
 ```{r, dat}
 dat[dat$ID == "3083",]
@@ -88,20 +115,16 @@ dat[dat$ID == "3083",]
 
 The first row is the mother and the subsequent rows are her offspring with OffIDs 1-8.
 
-## 3. Pollen pool genetic structure
+Now, use the `minus_mom` function to remove the mother's contribution to the offspring genotypes. You will be left with just the paternal contribution. The allele frequecies of all paternal contributions associated with a single mother is called a "pollen pool". 
 
-### a) Subtract maternal contribution to offspring genotype
-
-Now, use the `minus_mom` function to remove the mother's contribution to the offspring genotypes. You will be left with just the paternal contribution. The allele frequcies of all paternal contributions associated with a single mother is called a "pollen pool".
-
-**NOTE HW: Can  you explain what happens if mother and offspring both are heterozygous with the same two alleles?** Maybe point out examples in row 1?
+In some cases, the pollen contribution is ambiguous when the offspring has both alleles in common with the mother (e.g. see OffID 1, loc1_a and loc2_a). In such cases, both alleles are retained. 
 
 ```{r warning=FALSE, minus_mom}
 pollen <- gstudio::minus_mom(dat, MomCol = "ID", OffCol = "OffID")
 pollen[pollen$ID == "3083",]
 ```
 
-Now the pollen pool data can be analysed as any other population genetic data. 
+The pollen pool data can be analysed as any other population genetic data. 
 
 Note: There are some missing genotypes for the offspring that trigger warnings, which you may ignore. Here we suppressed the warnings to reduce output.
 
@@ -109,36 +132,45 @@ Note: There are some missing genotypes for the offspring that trigger warnings, 
 
 For example, we can conduct an AMOVA (see Week 4) to test if pollen pools belonging to different mothers are signficantly differentiated from one another. When an AMOVA is applied to pollen pools it is called a 'TwoGener' analysis (Two-generational analysis; Smouse et al. 2001, Dyer et al. 2004). 
 
-Here we use the `adonis` function from the `vegan` pacakage to do the analysis of variance on genetic distance matrices (AMOVA).
+Here we use the `amova` function from the `pegas` package to perform a hierarchical analysis of variance on genetic distance matrices (AMOVA), with moms nested within patches (this may take a while).
 
-**NOTE HW: BTW, I got rather different results with 'adonis' than the other AMOVA implementations in Week 4.**
-
-```{r, adonis}
+```{r, pegas}
 D <- gstudio::genetic_distance(pollen,mode="amova")
 D <- as.dist(D)
 Moms <- pollen$ID
-vegan::adonis(D ~ Moms)
+Populations <- as.factor(pollen$Population) 
+amova.result <- pegas::amova(D ~ Populations/Moms, nperm=500)
+amova.result
 ```
 
-From this output it can be seen that there is a signficant difference in pollen pools among mothers.
+Calculate phi from the variance components:
 
-**NOTE HW: Could you do a hierarchical AMOVA with moms nested within patches?**
+```{r}
+phi <- amova.result$varcomp[1]/sum(amova.result$varcomp[1])
+names(phi) <- "phi"
+phi
+```
 
-**NOTE HW: How about interpreting a phi statistic?** In the hierarchical analysis, it would be nice to test whether moms within the same patch sampled different pollen clouds, or quantify what percent of variation was among mothers within patches?
+Looking at the variance components and the phi-statistics (analogue to F-statistics), what can be said about differentiation among pollen pools?
+
+**Questions:**
+
+- Are pollen pools more differentiated among populations or among mothers within populations?
+- What does this mean biologically?
 
 ### c) Including space: Isolation by distance
 
 The 'TwoGener' analysis gives a summary statistic describing overall differentiation, but this does not tell us anything about **why** the pollen pools are differentiated. In order to better understand **why**, we can analyse the data spatially just like any other landscape genetic dataset. 
 
-For example, we can test a basic hypothesis of isolation by distance by asking: are pollen pools from mothers that are geographically close more similar than those that are far? We test this by calculating pairwise genetic similarity (proportion of shared alleles) and relate this to geographic distance.
+For example, we can test a basic hypothesis of isolation by distance by asking: are pollen pools from mothers that are geographically close more similar than those that are far? We test this by calculating pairwise genetic similarity (proportion of shared alleles) and relate this to geographic distance. For a more sophistocated analysis, the data could also be analysed as a "pollination graph" (Dyer et al. 2012), which is similar to population graphs that will be included in the Bonus Material for Week 13, but we will not do this here.
 
-**NOTE HW: maybe make a note about pollen graphs that are similar to population graphs, which will eventually be included as Bonus material in Week 13?**
-
-First, calculate matrix of pairwise genetic similarity among pollen pools:
+First, calculate matrix of pairwise genetic similarity among pollen pools.
 
 ```{r, dps}
-dps <- gstudio::genetic_distance(pollen, stratum = "ID", mode = "Dps")
+dps <- 1 - gstudio::genetic_distance(pollen, stratum = "ID", mode = "Dps")
 ```
+
+Note: the proportion of shared alleles is a measure of genetic similarity, hence we expect it to decrease with geographic distance. We convert this into a measure of genetic distance by subtracting it from 1 (see Week 5).
 
 Calculate matrix of pairwise geographic distance among pollen pools: 
 
@@ -149,23 +181,25 @@ xy.dist <- as.matrix(dist(xy))
 
 Plot 'dps' against geographic distance. 
 
-Note: 'dps' is a measure of genetic similarity, hence we expect it to decrease with geographic distance. We could plot (1 - dps) to get a plot of genetic distance against geographic distance.
-
 ```{r, plot}
 par(mar=c(4,4,0,0))
 plot(xy.dist[lower.tri(xy.dist)], dps[lower.tri(dps)], 
-    xlab = "geographic distance (m)", 
-     ylab = "proportion of shared alleles (dps)")
+    xlab = "Geographic distance (m)", 
+     ylab = "1 - Proportion of shared alleles (dps)")
 abline(lm(dps[lower.tri(dps)]~xy.dist[lower.tri(xy.dist)]))
 ```
 
-We see a slight pattern of isolation-by-distance where pollen pools that are spatially close are more similar. 
+We see that pollen pools belonging to mothers that are spatially close are more similar. Let's quantify the strength of this relationship using a Mantel test.
 
-**NOTE HW: How about quantifying this with Mantel r to assess the strength of the relationship?** I get a Mantel r = -0.44, which is quite a bit! Hence I would omit the word 'slight' in the sentence above. 
+```{r, mantel}
+vegan::mantel(xy.dist, dps)
+```
+
+Note: it seems that the `mantel` function in `vegan` automatically tests a one-sided alternative that the Mantel correlation is greater than zero. This means that if we had used 'Dps' as a measure of genetic similarity, the default setting would have resulted in a p-value of 0.999. Unfortunately, for now, this is not discussed in the help file and there is no option to change the alternative. 
 
 ## 4. Paternity analysis
 
-TwoGener and related methods are sensitive to inbreeding and strong genetic structure of adult populations, although methods exist to correct for some of these things (e.g. Dyer et al. 2004). However, it is often the best (or only) option for quantifying pollen flow for high density species where other analyses such as paternity assignment cannot be conducted. 
+'TwoGener' and related methods are sensitive to inbreeding and strong genetic structure of adult populations, although methods exist to correct for some of these things (e.g. Dyer et al. 2004). However, it is often the best (or only) option for quantifying pollen flow for high density species where other analyses such as paternity assignment cannot be conducted. 
 
 In our case, we have complete sampling of potential fathers within the seven populations (i.e., patches) from which mothers and their offspring were sampled. Therefore, we are able to conduct a paternity analysis, which will give us more detailed information about contemporary pollen flow. 
 
@@ -193,16 +227,15 @@ The code below does the following:
 1- prod((1-unlist(p.excl$Pexcl)))
 ```
 
-We see that using all seven loci, we acheive avery high exlusion probability, and that on average we should be able to exclude 99.9 of alternative fathers.
+We see that when using all seven loci, we achieve a very high exlusion probability, and that on average we should be able to exclude 99.9 of alternative fathers.
 
 ### b) Paternity analysis
 
-We will use the `gstudio` function `paternity`, which conducts a fractional allocation paternity analyis. This approach is useful when full exclusion cannot be acheived. In case multiple potential fathers cannot be exluded for a particular offspring, a likelihood of paternity is calculated for each non-excluded father based on Mendelian transition probabilites. 
+We will use the `gstudio` function `paternity`, which conducts a fractional-allocation paternity analyis. This approach is useful when full exclusion cannot be achieved. In case multiple potential fathers cannot be exluded for a particular offspring, a likelihood of paternity is calculated for each non-excluded father based on Mendelian transition probabilites. 
 
 Note that in the original paper from which these data originate, we used a more sophisticated approach implemented in the program 'COLONY2'. 'COLONY2' can account for genotyping errors, whereas the `gstudio` function `paternity` approach cannot and so we had to throw out some of our data here.
 
 Now let's conduct a paternity analysis for the seeds from mother 3083:
-
 
 ```{r, paternity}
 # Select all offspring of mom 3083:
@@ -216,11 +249,9 @@ pat.3083 <- gstudio::paternity(offspring.3083, mother.3083, fathers.3083 )
 pat.3083
 ```
 
-**NOTE HW: Please explain output and interpretation.** What does Fij mean and how is it interpreted?
+The output shows the probability of paternity (Fij) for each offspring-father pair, which is calcualted from Mendelian inheritance transition probabilities. Some offspring have multiple potential fathers and so appear in the table more than once (e.g. Offsprings 3 and 5). A higher 'Fij' value indcates that the Offspring-father pair is more likely.
 
-We see that not all fathers could be excluded for some of the offspring.
-
-Now let's do the paternity for the entire data set. First, we define a function `get.parentage` that does the paternity analysis for the offspring of one mome (i.e., one family). 
+Now let's do the paternity analysis for the entire data set. First, we define a function `get.parentage` that does the paternity analysis for the offspring of one mom (i.e., one family). 
 
 ```{r, full_paternity}
 # make a dataframe just for the offspring:
@@ -266,9 +297,7 @@ pat.sub <- pat.sub[,1:4] # get rid of the tmp_ID column
 
 ### c) Visualize reconstructed pollen flow events in space
 
-We can use the `spider_plot` function from `gstudio` to visualize the paternity assignments. `spiderplot` takes the output from `paternity` and combines it with spatial XY coordinate information. The output includes the coordinates of both mother (X, Y) and father (Xend, Yend) for each offspring. Here we will also add in the population IDs so that we can visualize each of the seven populations separately.
-
-**NOTE HW: does this assume that coordinates are in latlon format/projection?**
+We can use the `spiderplot_data` function from `gstudio` to visualize the paternity assignments. `spiderplot_data` takes the output from `paternity` and combines it with spatial XY coordinate information. The output includes the coordinates of both mother (X, Y) and father (Xend, Yend) for each offspring. Here we will also add in the population IDs so that we can visualize each of the seven populations separately. Note that the function asks for "longitude" and "latitude" but any form of spatial XY coordinates will do.
 
 ```{r, spiderplot_data}
 pat.sub <- gstudio::spiderplot_data(pat.sub, dat, longitude = "X", latitude = "Y")
@@ -292,6 +321,13 @@ ggplot() +
   theme(legend.position = "none")
 ```
 
+Try modifying the code to look at patterns from other populations.
+
+**Questions:**
+
+- Do pollen flow events appear to be amongst near-neigbours?
+- Are there clear differences in pollen flow patterns among populations?
+
 ### d) Visualize dispersal kernel
 
 We can calculate the distance of each pollen flow event, and then plot the distribution to visualize the dispersal kernel.
@@ -309,8 +345,8 @@ Plot the distribution of pollination events that are greater than 0 m (i.e. excl
 ```{r, dispersal_kernel}
 ggplot(pat.sub[pat.sub$pollen.dist >0,]) +
   geom_histogram( aes(x=pollen.dist),  bins=20) +
-  xlab("distance from pollen source (m)")  +
-  ylab("# of pollen flow events")
+  xlab("Distance from pollen source (m)")  +
+  ylab("Number of pollen flow events")
 ```
 
 ## 5. Linking paternity to ecological variables
@@ -362,27 +398,32 @@ MuMIn::dredge(mod)
 
 We see that the best model includes both flower density and mom isolation (for model selection, see Week 12 worked example and Week 7 video). 
 
-**NOTE HW: Any need to refit model with REML here?**
+Note: we should follow up with residual analysis etc., which we'll skip here to keep it short.
 
 Let's plot the relationships:
 
-```{r, plot_mom.isolation}
-ggplot(pat.outcrossed, aes(x=log(mom.isolation), 
+```{r fig.height=3, fig.width=7}
+Mom.isolation.plot <- ggplot(pat.outcrossed, 
+       aes(x=log(mom.isolation), y=log(pollen.dist))) + 
+       geom_point() + stat_smooth(method="lm", se=F) + 
+       xlab("Log(mom isolation)") +
+       ylab("Log(pollen flow distance)")
+
+Flower.density.plot <- ggplot(pat.outcrossed, 
+       aes(x=log(flower.density), 
        y=log(pollen.dist))) + geom_point() +
-  stat_smooth(method="lm", se=F) + 
-  xlab("log(mom isolation)") +
-  ylab("log(pollen flow distance)")
+       stat_smooth(method="lm", se=F) + 
+       xlab("Log(flower density)") +
+       ylab("Log(pollen flow distance)")
+
+cowplot::plot_grid(Mom.isolation.plot, Flower.density.plot, 
+                   labels = c("A", "B"))
 ```
 
-```{r, plot_flower.density}
-ggplot(pat.outcrossed, aes(x=log(flower.density), 
-       y=log(pollen.dist))) + geom_point() +
-  stat_smooth(method="lm", se=F) + 
-  xlab("log(flower density)") +
-  ylab("log(pollen flow distance)")
-```
+**Questions:**
 
-It looks like moms that are more isolated and are surrounded by fewer flowers receive pollen from further away
+- Which moms (isolated/non-isolated, surrounded by more/less flowers) tend to receive pollen from further away?
+- What biological processes might explain these patterns?
 
 ### b) Explain pollen flow at the population level
 
@@ -396,11 +437,7 @@ head(offspring)
 
 Calculate the number of outside pollination events per population by counting the number of NAs in the 'Fij' column:
 
-**NOTE HW: I suggest replacing 'tapply' by 'sapply'**
-
 ```{r, outside}
-#num.out <- tapply(offspring$Fij, offspring$Population, function(x) sum(is.na(x)))
-
 num.out <- sapply(split(offspring$Fij, offspring$Population),
                   function(x) sum(is.na(x)))
 ```
@@ -413,7 +450,7 @@ num.tot <- table(offspring$Population)
 
 Let's put this information into a data frame and add ecological information that we have gathered about each population. 
 
-Specifically we have measured the proportion of forested landscape at radii of 50, 100, 250, 500, and 1000 metres from population centroids, and have measured population size as the total number of flowering plants per population.
+Specifically we have measured the proportion of forest cover within radii of 50, 100, 250, 500, and 1000 metres from population centroids, and have measured population size as the total number of flowering *P. vulgaris* plants per population.
 
 ```{r, data.frame}
 # turn it into a dataframe:
@@ -429,14 +466,13 @@ pop.df <- merge(pop.df, pop.vars, by="Population")
 pop.df
 ```
 
-Now we can run a model to see which variables best explain the proportion of immigrated pollen per population. Because we only have n=7 populations, we limit the models to a single explanatory variable. We first scale the variables to make sure estimates are comparable. 
+Now we can run a model to see which variables best explain the proportion of immigrated pollen per population. Because we only have n=7 populations, we limit the models to a single explanatory variable.
 
-Our response variable is a proportion, so we use a glm with binomial error distribution. This model does not include any random effects.
+Our response variable is a proportion, so we use a glm (generalized linear model) with binomial error distribution. This model does not include any random effects.
+
+To automatize this, we first fit a 'full' model with all six potential predictors. We won't interpret this model as it would be overfitted, but we'll use it as input for the next step.
 
 ```{r, glm}
-# scale the explanatory variables
-pop.df[,4:9] <- scale(pop.df[,4:9])
-
 # specify the model
 mod2 <- glm(cbind(num.out, num.tot-num.out) ~ forest.50 + forest.100 +
               forest.250 + forest.500 + forest.1000 + population.size,
@@ -444,15 +480,15 @@ mod2 <- glm(cbind(num.out, num.tot-num.out) ~ forest.50 + forest.100 +
               na.action = "na.fail")
 ```
 
-Here, we use the function `dredge` again to select the best model among those with only a single predictors. This is specified with the argument `m.lim=c(0,1)`.
+We use the function `dredge` again to select the best model among those with only a single predictors (plus the intercept-only model). This is specified with the argument `m.lim=c(0,1)`.
 
 ```{r, scale.x}
-MuMIn::dredge(mod2,m.lim=c(0,1) )
+MuMIn::dredge(mod2,m.lim=c(0,1))
 ```
 
-We see that the best model is the null intercept model, suggesting that none of the predictors fit the data very well. However, the next best model includes 'forest.250' and with a delta AICc of less than 2, we take this model to be equally likely. 
+We see that the best model is the intercept-only (null) model, suggesting that none of the predictors fit the data very well. However, the next-best model includes 'forest.250' with a delta AICc of less than 2, and we take this model to be equally likely. 
 
-Interestingly, in our original paper with found that forest.500 was the best predictor, followed by population size. This suggests that the choice of paternity analysis really can make a difference.
+Note: Interestingly, in our original paper with found that forest.500 was the best predictor, followed by population size. This suggests that the choice of paternity analysis method really can make a difference.
 
 Let's plot the model including forest.250:
 
@@ -462,21 +498,19 @@ forest.250.mod <- glm(cbind(num.out, num.tot-num.out) ~ forest.250,
 
 ggplot(pop.df, aes(x=forest.250, y=num.out/num.tot)) + geom_point() +
   geom_line(aes(x=forest.250, y=predict(forest.250.mod, type="response"))) +
-  xlab("proportion of forest at 250 m") +
-  ylab("proportion of immigrant pollen")
+  xlab("Proportion of forest at 250 m") +
+  ylab("Proportion of immigrant pollen")
 ```
 
-We see that populations surrounded by more forest receive less outside pollen.
-
-**NOTE HW: There seems to be an outlier.** Which population is this? Do we have an explanation for it?
-
-**NOTE HW: The labelling of the x-axis may be confusing here.** Maybe add 'standardized' to label? Is it necessary to standardize the variables here? I don't think you are interpreting the slope coefficient estimates or comparing them directly.
+We see that populations surrounded by more forest receive less outside pollen, although it is apparent that there is one outlier (population A21) with a high proportion of immigration pollen but intermediate levels of surrounding forest. This is likely also a product of our choice of paternity anlaysis - in our original paper (DiLeo et al. in press) we were able to assign a much higher proportion of fathers in popualtion A21, giving us lower pollen immigration rates. 
 
 ## 6. References
 
-- DiLeo MF, R Holderegger and HH Wagner (*in press*). Contemporary pollen flow as a multiscale process: evidence from the insect-pollinated herb *Pulsatilla vulgaris*. Journal of Ecology.
+- DiLeo MF, R Holderegger and HH Wagner (*in press*). Contemporary pollen flow as a multiscale process: evidence from the insect-pollinated herb *Pulsatilla vulgaris*. Journal of Ecology. https://doi.org/10.1111/1365-2745.12992
 
 - Dyer RJ, RD Westfall, VL Sork VL and PE Smouse (2004). Two-generation analysis of pollen flow across a landscape V: a stepwise approach for extracting factors contributing to pollen structure. Heredity 92: 204-211.
+
+- Dyer RJ, Chan DM, Gardiakos VA, Meadows CA (2012) Pollination graphs: quantifying pollen pool covariance networks and the influence of intervening landscape on genetic connectivity in the North American understory tree, Cornus florida L. Landscape ecology 27:239-51.
 
 - Smouse PE,  RJ Dyer, RD Westfall and VL Sork (2001). Two‐generation analysis of pollen flow across a landscape. I. Male gamete heterogeneity among females. Evolution 55: 260–271. 
 
