--- a/vignettes/Week11_Landscape_Genomics/Week11_vignette.Rmd
+++ b/vignettes/Week11_Landscape_Genomics/Week11_vignette.Rmd
@@ -146,11 +146,17 @@ For this assessment of K, we'll run only one replicate of `snmf` for each value 
 If you wanted to extract ancestry coefficients for the individual wolves, you'd want to run more replicates. See the [LEA package tutorial](http://membres-timc.imag.fr/Olivier.Francois/LEA/tutorial.htm) for details on snmf and additional tips for running LFMM.
 
 ```{r, snmf, results="hide"}
-LEA::write.geno(gen.imp, "genotypes.geno")
+outfile <- file.path(here::here(), "output", "genotypes.geno")
+LEA::write.geno(gen.imp, outfile)
 findK <- NULL
-findK <- LEA::snmf("genotypes.geno", 
-                   K=1:6, ploidy=2, entropy=T, rep=1, project = "new")
-plot(findK)
+findK <- LEA::snmf(outfile, K=1:6, ploidy=2, entropy=T, rep=1, project = "new")
+#plot(findK)
+
+#LEA::write.geno(gen.imp, "genotypes.geno")
+#findK <- NULL
+#findK <- LEA::snmf("genotypes.geno", 
+#                   K=1:6, ploidy=2, entropy=T, rep=1, project = "new")
+#plot(findK)
 ```
 
 The most likely value of K is where minimal cross-entropy is lowest -- in this case, at K=3.
@@ -164,9 +170,9 @@ K <- 3
 Again, we have to write out the inputs before running the model: 
 
 ```{r, LFMM, results="hide"}
-write.table(gen.imp, file="gen.lfmm", 
+write.table(gen.imp, file=file.path(here::here(), "output", "gen.lfmm"), 
             row.names=F, col.names=F)
-write.table(pred.PC1, file="PC1.env", 
+write.table(pred.PC1, file=file.path(here::here(), "output","PC1.env"), 
             row.names=F, col.names=F)
 
 ```
@@ -178,10 +184,15 @@ The following (commented out) line shows the recommended parameters:
 ```{r, LFMM1, results="hide"}
 wolf.lfmm <- NULL
 
-wolf.lfmm <- LEA::lfmm("gen.lfmm", "PC1.env", K=K, project="new", 
-                       repetitions=3, iterations=4000, burnin=2000)
+wolf.lfmm <- LEA::lfmm(
+  input.file=file.path(here::here(), "output", "gen.lfmm"),
+  environment.file=file.path(here::here(), "output", "PC1.env"), 
+  K=K, project="new", repetitions=3, iterations=4000, burnin=2000)
 
-#wolf.lfmm <- lfmm("gen.lfmm", "PC1.env", K=K, project="new", repetitions=10, iterations=5000, burnin=2500)
+#wolf.lfmm <- LEA::lfmm(
+#  input.file=file.path(here::here(), "output", "gen.lfmm"), 
+#  environment.file=file.path(here::here(), "output", "PC1.env"), 
+#  K=K, project="new", repetitions=10, iterations=5000, burnin=2500)
 ```
 
 ### c) Identify LFMM candidates
@@ -378,11 +389,11 @@ Dormann CF, Elith J, Bacher S, et al. (2013) [Collinearity: a review of methods 
 
 Forester BR, Lasky JR, Wagner HH, Urban DL (2018) [Comparing methods for detecting multilocus adaptation with multivariate genotype-environment associations](https://www.biorxiv.org/content/early/2017/12/17/129460). *Molecular Ecology*.
 
-Forester BR (2018) [Vignette: Detecting multilocus adaptation using Redundancy Analysis (RDA)](http://popgen.nescent.org/2018-03-27_RDA_GEA.html). Population Genetics in R: [popgen.nescent.org](http://popgen.nescent.org/).
+Forester BR (2018) [Vignette: Detectingn multilocus adaptation using Redundancy Analysis (RDA)](http://popgen.nescent.org/2018-03-27_RDA_GEA.html). Population Genetics in R: [popgen.nescent.org](http://popgen.nescent.org/).
 
-Francois O, Martins H, Caye, K, Schoville S (2016) [Controlling false discoveries in genome scans for selection](http://onlinelibrary.wiley.com/doi/10.1111/mec.13513/full). *Molecular Ecology*, 25: 454-469.
+Fran?ois O, Martins H, Caye, K, Schoville S (2016) [Controlling false discoveries in genome scans for selection](http://onlinelibrary.wiley.com/doi/10.1111/mec.13513/full). *Molecular Ecology*, 25: 454-469.
 
-Frichot E, Francois O (2015) [LEA: An R package for landscape and ecological association studies](http://onlinelibrary.wiley.com/doi/10.1111/2041-210X.12382/abstract). *Methods in Ecology and Evolution*, 6: 925-929.
+Frichot E, Fran?ois O (2015) [LEA: An R package for landscape and ecological association studies](http://onlinelibrary.wiley.com/doi/10.1111/2041-210X.12382/abstract). *Methods in Ecology and Evolution*, 6: 925-929.
 
 Gosselin T (2017) [grur: an R package tailored for RADseq data imputations](https://github.com/thierrygosselin/grur). R package version 0.0.1 doi:10.5281/zenodo.496176.
 
@@ -398,9 +409,8 @@ Rellstab C, Gugerli F, Eckert AJ, Hancock AM, Holderegger R (2015) [A practical 
 
 Schweizer RM, vonHoldt BM, Harrigan R, et al. (2016) [Genetic subdivision and candidate genes under selection in North American grey wolves](http://onlinelibrary.wiley.com/doi/10.1111/mec.13364/full). *Molecular Ecology*, 25: 380-402.
 
-
 Zuur AF, Ieno EN, Elphick CS (2010) [A protocol for data exploration to avoid common statistical problems](https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/j.2041-210X.2009.00001.x). *Methods in Ecology and Evolution*, 1: 3-14.
 
 ```{r message=FALSE, warning=TRUE, include=FALSE}
-LandGenCourse::detachAllPackages()
+#LandGenCourse::detachAllPackages()
 ```
