--- a/vignettes/Week14_Contemporary_Gene_Flow/Week14_vignette.Rmd
+++ b/vignettes/Week14_Contemporary_Gene_Flow/Week14_vignette.Rmd
@@ -40,7 +40,7 @@ There are three data files associated with this lab:
 
 Install some packages needed for this worked example.
 
-```{r}
+```{r install global_options, include=TRUE, results="hide", message=FALSE, warning=FALSE}
 if(!requireNamespace("popgraph", quietly = TRUE))
 {
   install.packages(c("RgoogleMaps", "geosphere", "proto", "sampling", 
@@ -50,7 +50,7 @@ if(!requireNamespace("popgraph", quietly = TRUE))
 if(!requireNamespace("gstudio", quietly = TRUE)) remotes::install_github("dyerlab/gstudio")
 ```
 
-```{r, packages}
+```{r packages global_options, include=TRUE, results="hide", message=FALSE, warning=FALSE}
 library(LandGenCourse)
 library(dplyr)
 library(ggplot2)
